2007-09-24 [holger]	0.0.1

	* initial import