@@ -1,3 +1,11 @@
+2007-09-24 [holger]	0.0.1cvs1
+
+	* src/adf_finder.c
+		Remove some debug info.
+	* src/adf_gtk.c
+		Remove delete button until I found how how
+		to delete properly.
+
 2007-09-24 [holger]	0.0.1
 
 	* initial import
